--- a/jobs.html
+++ b/jobs.html
@@ -10,7 +10,7 @@ layout: default
         <div class="column col-12">
           <h2>Executive Assistant</h2>
           <div class="tag"><span>Gainesville, FL</span></div>
-          <p>Theron Industries is looking for a part-time Executive Assistant who enjoys paying attention to the details in a fast paced environment. You will support the two founder by enabling them to focus on building the company, by keeping them organized and prepared for the events of the day. You will have the opportunity to participate in a wide variety of confidential and strategic tasks to support Theron Industries' objectives and take us to the next level.</p>
+          <p>Theron Industries is looking for a part-time Executive Assistant who enjoys paying attention to the details in a fast paced environment. You will support the two founders by enabling them to focus on building the company, by keeping them organized and prepared for the events of the day. You will have the opportunity to participate in a wide variety of confidential and strategic tasks to support Theron Industries' objectives and take us to the next level.</p>
           <h3>The Responsibilities</h3>
           <ul>
             <li><i class="ss-icon ss-standard">&#x22C6;</i> <p>Manage complex calendars, requiring interaction with both internal/external executives and assistants, as well as consultants, to coordinate a variety of detailed executive meetings</p></li>
