--- a/jobs.html
+++ b/jobs.html
@@ -31,9 +31,11 @@ layout: default
             <li><i class="ss-icon ss-standard">&#x1F44D;</i> <p>You have a passion for real estate</p></li>
             <li><i class="ss-icon ss-standard">&#x1F44D;</i> <p>Interested in working in tech</p></li>
             <li><i class="ss-icon ss-standard">&#x1F44D;</i> <p>Enjoy social media</p></li>
+            <li><i class="ss-icon ss-standard">&#x1F44D;</i> <p>Have an amazing playlist to get through the day</p></li>
+            <li><i class="ss-icon ss-standard">&#x1F44D;</i> <p>You are OK with sometimes working remote</p></li>
           </ul>
           <hr>
-          <p>To apply for this position, please send an email including why you want to work with us: <a href="mailto:hello@theronindustries.com">hello@theronindustries.com</a></p>
+          <p>To apply for this position, please send an email including at least one use of an emoji, your favorite GIF, and why you want to work with us: <a href="mailto:hello@theronindustries.com">hello@theronindustries.com</a></p>
         </div><!--/column-->
       </div><!--/row-->
 
