--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <div class="row">
         <div class="column col-12">
           <h2>Theron Industries&trade;</h2>
-          <p>Our mission is to turn potential energy into kinetic energy. We are an American company that is built from a collection of ideas to better the world through incredible design and thoughtful straight. Our passion is real estate and we live for surfing, motorcycles, and building amazing products.</p>
+          <p>Our mission is to turn potential energy into kinetic energy. We are an American company that is built from a collection of ideas to better the world through incredible design and thoughtful strategy. Our passion is real estate and we live for surfing, motorcycles, and building amazing products.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
