--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
 
       <div class="row">
         <div class="column col-12">
-          <h2>Theron Studios&trade;</h2>
-          <div class="tag"><a href="http://theronstudios.com/">Visit</a></div>
+          <h2>Kennedy's Garage&trade;</h2>
+          <div class="tag"><a href="http://kennedysgarage.com/">Visit</a></div>
           <p>We build brands. We are a digital creative agency specializing in mobile. We are a small team of giants that believes in helping companies grow their brand by using innovative strategies &amp; beautiful designs.</p>
           <br/><hr/>
         </div><!--/column-->
@@ -34,6 +34,16 @@ layout: default
 
       <div class="row">
         <div class="column col-12">
+          <h2>Cocoquina&trade;</h2>
+          <!-- <div class="tag"><a href="http://cocoquina.com/">Visit</a></div> -->
+          <div class="tag"><span>Soon</span></div>
+          <p>We create 100% all natural beauty products.</p>
+          <br/><hr/>
+        </div><!--/column-->
+      </div><!--/row-->
+
+      <div class="row">
+        <div class="column col-12">
           <h2>Theron Moto Co.&trade;</h2>
           <div class="tag"><a href="http://theronmoto.com/">Visit</a></div>
           <p>We are looking to purchase pre-1998 air cooled Porsche 911's. Please contact us if you are selling or you know of one for sale. Let's make a deal today.</p>
@@ -41,14 +51,14 @@ layout: default
         </div><!--/column-->
       </div><!--/row-->
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="column col-12">
           <h2>Status Chart&trade;</h2>
           <div class="tag"><a href="https://www.statuschart.com/">Visit</a></div>
           <p>Status Chart is the simplest way for the tech community to track and share their professional milestones. It’s a tool we designed and streamlined to track the status of your projects and pursuits in real time. Share what you’re doing and what you’ve done, all from page one.</p>
           <br/><hr/>
-        </div><!--/column-->
-      </div><!--/row-->
+        </div>
+      </div> -->
 
       <div class="row">
         <div class="column col-12">
