--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@ layout: default
       <div class="row">
         <div class="column col-12">
           <h2>Cocoquina&trade;</h2>
-          <!-- <div class="tag"><a href="http://cocoquina.com/">Visit</a></div> -->
-          <div class="tag"><span>Soon</span></div>
-          <p>We create 100% all natural beauty products.</p>
+          <div class="tag"><a href="https://cocoquina.com/">Visit</a></div>
+          <p>Cocoquina <a href="https://cocoquina.com/">Beach Hair</a> was created because we couldn't find any products that made us feel like we just stepped out of the ocean. Everything on the market made us feel fake and unnatural. Our first thought was that we would simply take a swim in the ocean every morning, but this was an unrealistic solution. So we decided to bring the ocean back with us. To make sure it is safe we remove any foreign matter through our special purification process. After months of testing we were excited to find that not only did Cocoquina Beach Hair work, but it gave us that effortlessly cool look.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
