--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <div class="row">
         <div class="column col-12">
           <h2>Theron Industries&trade;</h2>
-          <p>Our mission is to turn potential energy into kinetic energy. We are an American company that is built from a collection of ideas to better the world through incredible design and thoughtful strategy. Our passion is real estate and we live for surfing, motorcycles, and building amazing products.</p>
+          <p>Our mission is to turn potential energy into kinetic energy. We are an American company that is built from a collection of ideas to better the world through incredible design and thoughtful strategy. Our passion is technology &amp; real estate and we live for surfing, riding motorcycles, and building amazing products.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
@@ -18,7 +18,7 @@ layout: default
         <div class="column col-12">
           <h2>Kennedy's Garage&trade;</h2>
           <div class="tag"><a href="http://kennedysgarage.com/">Visit</a></div>
-          <p>We build brands. We are a digital creative agency specializing in mobile. We are a small team of giants that believes in helping companies grow their brand by using innovative strategies &amp; beautiful designs.</p>
+          <p>Kennedy is a naively optimistic entrepreneur. Kennedy's Garage has established roots dating back to 1941 of being a place for craftsman to build quality products.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
@@ -27,16 +27,16 @@ layout: default
         <div class="column col-12">
           <h2>Theron Property&trade;</h2>
           <div class="tag"><a href="http://theronproperties.com/">Visit</a></div>
-          <p>We are a real estate investment and property management company.</p>
+          <p>We are a real estate investment and property management company. Currently we are not looking for outside investments, but we are actively looking for multifamily properties.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
 
       <div class="row">
         <div class="column col-12">
-          <h2>Cocoquina&trade;</h2>
-          <div class="tag"><a href="https://cocoquina.com/">Visit</a></div>
-          <p>Cocoquina <a href="https://cocoquina.com/">Beach Hair</a> was created because we couldn't find any products that made us feel like we just stepped out of the ocean. Everything on the market made us feel fake and unnatural. Our first thought was that we would simply take a swim in the ocean every morning, but this was an unrealistic solution. So we decided to bring the ocean back with us. To make sure it is safe we remove any foreign matter through our special purification process. After months of testing we were excited to find that not only did Cocoquina Beach Hair work, but it gave us that effortlessly cool look.</p>
+          <h2>Beach Hair&trade;</h2>
+          <div class="tag"><a href="https://beachhair.co/">Visit</a></div>
+          <p><a href="https://beachhair.co/">Beach Hair</a> was created because we couldn't find any products that made us feel like we just stepped out of the ocean. Everything on the market made us feel fake and unnatural. Our first thought was that we would simply take a swim in the ocean every morning, but this was an unrealistic solution. So we decided to bring the ocean back with us. To make sure it is safe we remove any foreign matter through our special purification process. After months of testing we were excited to find that not only did Beach Hair work, but it gave us that effortlessly cool look.</p>
           <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
@@ -46,7 +46,6 @@ layout: default
           <h2>Theron Moto Co.&trade;</h2>
           <div class="tag"><a href="http://theronmoto.com/">Visit</a></div>
           <p>We are looking to purchase pre-1998 air cooled Porsche 911's. Please contact us if you are selling or you know of one for sale. Let's make a deal today.</p>
-          <br/><hr/>
         </div><!--/column-->
       </div><!--/row-->
 
@@ -59,13 +58,13 @@ layout: default
         </div>
       </div> -->
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="column col-12">
           <h2>Theron Supply Co.&trade;</h2>
           <div class="tag"><span>Soon</span></div>
           <p>In the creative process of creating ideas, sometime products start to take shape outside of the original scope.</p>
-        </div><!--/column-->
-      </div><!--/row-->
+        </div>
+      </div> -->
 
     </div><!--/content-->
   </div><!--/container-->
